# hw-2-tonyzhang-byte

./: .gitignore  README.md  ai_documentation.txt  environment.yml  pyproject.toml  test.txt
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
